Add spam blocking
A field has been added to the Profile model.
If the user sends a verification email more
than 10 times, is_active changes to False.
During authentication, the number of emails
is reset to zero

--- a/account/templates/registration/confirm_email.html
+++ b/account/templates/registration/confirm_email.html
@@ -2,6 +2,7 @@
 
 {% block content %}
 <div>
-    <p>Проверьте вашу почту, чтобы завершить регистрацию.</p>
+    <p>Проверьте вашу почту, чтобы завершить регистрацию.</p>    
+    <p>Для отправки нового сообщения авторизуйтесь</p>
 </div>
 {% endblock %}
