--- a/account/templates/account/dashboard.html
+++ b/account/templates/account/dashboard.html
@@ -1,10 +1,31 @@
 {% extends "account/pattern.html" %}
 
 {% block content %}
-<p>Позже здась появится информация о пользователе </p>
 {% if request.user.is_authenticated %}
-бравл старс
-{% endif %}
+    <div class="form">
+        <div style="background-color: rgb(26, 26, 26); padding: 1vw; border-radius: 1rem;">
+            <div>
+                <p style="margin-bottom: 1.5rem; font-size: 1.5rem">Привязка Telegram аккаунта</p>
+                <p style="margin-bottom: 1.5rem; font-size: 1rem">
+                    Чтобы привязать аккаунт на сайте к аккаунту телеграма необходимо:
+                </p>
+                <dl>
+                    <dd>1. Перейти по ссылке: <a href="https://web.telegram.org/k/#@Ba1ancedbot">Telegram</a></li>
+                    <dd>2. Написать следующее сообщение: /bind</li>
+                    <dd>3. Когда от бота последует ответ на сообщение нужно отправить ему токен (никому не сообщайте токен)</li>
+                    <dd>4. Токен:<div style="font-size: 0.8rem">{{ token }}</div></li>
+                </dl>
+
+                <a href="http://127.0.0.1:8000/account/generate-new-token/" style="margin-top: 1rem">
+                    <button style="margin-bottom: 1.5rem" type="button" class="btn btn-outline-warning">Сгенерировать новый токен</button>
+                </a>
+            </div>
+            <p style="margin-bottom: 1.5rem; font-size: 1.5rem">Вы авторизованы</p>
+            <a style="margin-bottom: 1.5rem" href='http://127.0.0.1:8000/account/logout/'>
+            <button type="button" class="btn btn-outline-danger">Выйти из аккаунта</button>
+            </a>
+        </div>
+    </div>{% endif %}
 {% endblock content%}
 
 {% block page5 %}
