--- a/debit/templates/debit/pattern.html
+++ b/debit/templates/debit/pattern.html
@@ -22,7 +22,7 @@
             <a class="navbar-brand" href="http://127.0.0.1:8000/" {% block page1 %}{% endblock page1%}>Balanced</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"><img src="list.svg" alt="" style="width: 2.5rem;"></span>
+                <span class="navbar-toggler-icon"><img src="{% static "svg/list.svg" %}" alt="" style="width: 2.5rem;"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
