--- a/account/static/css/reg_style.css
+++ b/account/static/css/reg_style.css
@@ -4,7 +4,6 @@ body {
     background-color: #000;
     color: #fff;
     font-family: 'Press Start 2P', cursive;
-    overflow: hidden;
     height: 100vh;
 }
 
@@ -35,18 +34,9 @@ body {
     width: 100vw;
 }
 
-.navbar {
-    grid-row: 1/2;
-    grid-column: 1/4;
-    height: 5rem;
-}
-
-
-.form {
-    margin-top: 1rem;
-    grid-row: 1/6;
-    grid-column: 2/3;
-}
+.copyhelper {
+    position: absolute;
+  }
 
 
 .content>a>p:hover {
@@ -82,5 +72,21 @@ body>nav>div>a:hover {
         grid-row: 3/6;
         grid-column: 1/4;
         padding: 2rem;
+    }
+
+    .content{
+        display: grid;
+        grid-template-rows: repeat(8, 1fr);
+        height: 80vh;
+        padding: 1rem;
+    }
+
+    .content>div{
+        background-color: rgb(26, 26, 26);
+        grid-column: 1/4;
+        height: 110%;
+        border-radius: 1rem;
+        padding: 0rem;
+        padding-top: 1rem;
     }
 }
