--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -29,7 +29,7 @@
     <div class="cont_block" style="border-color: #FFBA08;">
         <p>Можете ознакомиться с сервисом самостоятельно, либо прочитать инструкцую, расположенную по ссылке
             ниже.</p>
-        <a href="#">Инструкция</a>
+        <a href='static/doc/doc.pdf'>Инструкция</a>
     </div>
     <div class="cont_block" style="border-color: #D00000; ">
         <p style="font-family: 'Flow Rounded', cursive; font-size: 1.5rem; line-height: 1rem;">
