--- a/debit/templates/debit/credit.html
+++ b/debit/templates/debit/credit.html
@@ -26,6 +26,17 @@
           </div>
           <label for="startDate" style="margin-bottom: 0.5rem;">Категория</label>
           {{ debit_form.category }}
+          <script>
+            let debit_category = [{%for i in credit_categories%}'{{i}}',{%endfor%}];
+            let select = document.getElementById('id_category')
+          
+            for(let i in debit_category){
+              let elem = document.createElement('option');
+              elem.innerHTML = `${debit_category[i]}`
+              elem.value = `${debit_category[i]}`
+              select.append(elem)
+            }
+          </script>
           <label for="startDate" style="margin-bottom: 0.5rem; margin-top: 1rem;">Приоритет расхода</label>
           {{ debit_form.priority }}
           <button type="submit" class="btn btn-outline-success" style="margin-top: 1rem;">Создать запись</button>
@@ -67,11 +78,32 @@
           {% csrf_token %}
             <div class="mb-3">
             <label for="exampleInputEmail1" class="form-label">Номер записи</label>
-            {{ delete_form.record_id }}
+            {{ delete_record_form.record_id }}
             </div>
             <button type="submit" class="btn btn-outline-danger">Удалить</button>
         </form>
     </div>
+    <div class="form">
+      <p style="font-size: 1.2rem;">Удаление категорий</p>
+      <form method='post'>
+        {% csrf_token %}
+          <div class="mb-3">
+          <label for="exampleInputEmail1" class="form-label">Категория</label>
+          {{ delete_category.del_category }}
+          <script>
+            debit_category = [{%for i in credit_categories%}'{{i}}',{%endfor%}];
+            select = document.getElementById('id_del_category')
+          
+            for(let i in debit_category){
+              let elem = document.createElement('option');
+              elem.innerHTML = `${debit_category[i]}`
+              elem.value = `${debit_category[i]}`
+              select.append(elem)
+            }
+          </script>
+          </div>
+          <button type="submit" class="btn btn-outline-danger">Удалить</button>
+      </form>
     </div>
 </div>
     {% else %}
